# LearnPatterns

./: .gitignore  CMakeLists.txt  README.md
adapter/: BUILD  Duck.h  DuckAdapterMain.cpp  MallardDuck.h  Turkey.h  TurkeyAdapter.h  WildTurkey.h
command/: BUILD  Command.h  GarageDoor.h  GarageDoorOpenCommand.h  Light.h  LightOnCommand.h  RemoteControlMain.cpp  SimpleRemoteControl.h
composite/: BUILD  Menu.h  MenuComponent.h  MenuItem.h  MenuMain.cpp  Waitress.h
decorator/: Beverage.h  CoffeeMain.cpp  CondimentDecorator.h  DarkRoast.h  Decaf.h  Espresso.h  HouseBlend.h  Mocha.h  Soy.h  SteamedMilk.h  Whip.h
facade/: Amplifier.h  HomeTheaterFacade.h  HomeTheaterMain.cpp  PopcornPopper.h  Projector.h  Screen.h  StreamingPlayer.h  TheaterLights.h  Tuner.h
factory/: ChicagoPizzaStore.h  ChicagoStyleCheesePizza.h  ChicagoStyleClamPizza.h  ChicagoStylePepperoniPizza.h  ChicagoStyleVeggiePizza.h  NYPizzaStore.h  NYStyleCheesePizza.h  NYStyleClamPizza.h  NYStylePepperoniPizza.h  (+4 more)
src/strategy/classic/: CMakeLists.txt  Duck.h  FlyBehavior.h  FlyNoWay.cpp  FlyNoWay.h  FlyRocketPowered.cpp  FlyRocketPowered.h  FlyWithWings.cpp  FlyWithWings.h  Main.cpp  MallardDuck.h  ModelDuck.h  MuteQuack.cpp  MuteQuack.h  NormalQuack.cpp  NormalQuack.h  QuackBehavior.h  Squeak.cpp  Squeak.h
src/strategy/function/: CMakeLists.txt  Duck.h  FlyNoWay.cpp  FlyNoWay.h  FlyRocketPowered.cpp  FlyRocketPowered.h  FlyWithWings.cpp  FlyWithWings.h  Main.cpp  MallardDuck.cpp  MallardDuck.h  ModelDuck.cpp  ModelDuck.h  MuteQuack.cpp  MuteQuack.h  NormalQuack.cpp  NormalQuack.h  Squeak.cpp  Squeak.h
(+107 files in other folders)
